--- a/app/views/admin/wines/_form.html.erb
+++ b/app/views/admin/wines/_form.html.erb
@@ -1,4 +1,6 @@
 <div class="admin_wine_register">
+  <%= theme_stylesheet_link_tag "admin" %>
+  <%= theme_javascript_include_tag 'wine_registers_variety', 'region_world' %>
   <%= form_for [:admin, @wine] do |w| %>
      <table cellpadding="5" cellspacing="10">
         <tr>
@@ -18,8 +20,23 @@
           <td><%= w.text_field :other_cn_name %></td>
         </tr>
         <tr>
+          <td><label>区域</label></td>
+          <td><%= render :partial => 'admin/share/region_tree', :locals => {:wine_parent => @wine, :region_tree_id => @wine.region_tree_id } %></td>
+        </tr>
+        <tr>
           <td><label>官方网址</label></td>
           <td>http://<%= w.text_field :official_site %></td>
+        </tr>
+        <tr>
+          <td><label>图片</label></td>
+          <td>
+            <% if @wine.photos.present? %>
+                <% @wine.photos.each do |photo| %>
+                    <%= image_tag(photo.image_url(:thumb)) %>
+                <% end %>
+            <% end %>
+            <%= link_to "上传或编辑图片", edit_images_admin_photos_path(:imageable_type => "Wine", :imageable_id => @wine.id), :target => "_blank" %>
+          </td>
         </tr>
        <tr><td></td><td><%= w.submit "提交" %></td></tr>
      </table>
