wine photo detail update

--- a/public/template/wine_photo_detail.html
+++ b/public/template/wine_photo_detail.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-	<div id="header">
-    <div class="main950">
+    <div id="header">
+<div class="main950">
         	<div id="logo"><img src="images/common/logo.gif" alt="iWine" width="299" height="43" /></div>
             <form action="search.html">
                 <div id="top_search">
@@ -52,9 +52,9 @@
                 <div class="pre_next"><a href="#" class="btn_gray mr5"><span>前一张</span></a><a href="#" class="btn_gray"><span>后一张</span></a></div>
             </div>
             <div class="photo">
-                <img src="images/test/wine440.jpg" width="440" height="440" alt="photo" />
+                <img src="images/test/wine.jpg" width="164" height="610" alt="photo" />
             </div>
-              <div class="info">
+              <div class="info clearfix">
             	<div class="like float_r"><a href="#" class="icon_like">赞 (3)</a></div>
                 <div class="share float_r">分享到：<a href=" #"><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_on.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/kaixin_s_on.png" alt="开心网" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/renren_s_on.png" alt="人人网" width="17" height="17" align="absmiddle" /></a> |</div>
                 <div>10浏览 | 4评论</div>
