--- a/public/template/stylesheets/wine.css
+++ b/public/template/stylesheets/wine.css
@@ -71,8 +71,8 @@ ul.photo_list li img {margin:0 0 10px 0;}
 ul.photo_list li .intro, .album_left .photo .intro{margin:0 0 5px 0;}
 .content .album_left {width:590px;float:left;margin:0 28px 0 0;}
 .content .album_right {width:210px;float:left;}
-.album_left .info {margin:15px 0 40px 0;color:#666;}
-.album_left .photo img {margin:0 0 10px 0;}
+.album_left .info {margin-bottom:15px;color:#666;}
+.album_left .photo {text-align:center;margin-bottom:20px;background-color:#f3f3f3;}
 .album_left .comment_list .main {width:520px;}
 .album_left .post_main {width:410px;}
 .album_left .post_main textarea {width:390px;height:80px;background-color:#fff;}
