index image display update

--- a/public/template/index.html
+++ b/public/template/index.html
@@ -166,7 +166,7 @@
             <div class="iw_more"><a href="#">去看看这个活动</a></div>
       </div>
       <div class="iw">
-        	<div class="iw_img"><a href="wine_profile.html"><img src="images/test/col_img200_3.jpg" width="200" height="266" /></a></div>
+        	<div class="iw_img"><a href="wine_profile.html"><img src="images/test/wine150.jpg" width="100" height="372" /></a></div>
             <div class="iw_info">
                 <h1><a href="wine_profile.html">2001拉菲珍宝</a></h1>
                 <h2><a href="wine_profile.html">Carruades de Lafite</a></h2>
