--- a/public/template/wine_profile.html
+++ b/public/template/wine_profile.html
@@ -88,18 +88,17 @@
            	  <div id="preview_wrap">
                 <div id="preview_outer">
                     <div id="preview_inner">
-                        <div>
-                            <img src="images/test/wine_profile_pic_b.jpg" alt="Leonardo Maia" />
-                            <!--<a href="http://www.leonardomaia.com.br/">2001拉菲珍宝</a>-->	
+                        <div class="cover">
+                            <a href="wine_photo_detail.html"><img src="images/test/wine_profile_pic_b.jpg" alt="Leonardo Maia" /></a>
                         </div>
                         <div>
-                            <img src="images/test/wine440_02.jpg" alt="skillicorn" />
-                        </div>
+                            <a href="wine_photo_detail.html"><img src="images/test/wine440_02.jpg" alt="skillicorn" /></a>
+                      </div>
                         <div>
-                            <img src="images/test/wine440_03.jpg" alt="theenergycell" />
-                        </div>
+                           <a href="wine_photo_detail.html"> <img src="images/test/wine440_03.jpg" alt="theenergycell" /></a>
+                      </div>
                         <div>
-                            <img src="images/test/wine440_04.jpg" alt="Fred Maya" />
+                            <a href="wine_photo_detail.html"><img src="images/test/wine440_04.jpg" alt="Fred Maya" /></a>
                         </div>
                     </div>
                 </div>
