--- a/public/template/myhp_following_list.html
+++ b/public/template/myhp_following_list.html
@@ -175,9 +175,10 @@
                         </div>
             </div>
             <div class="right">
-            	<div class="sidebar">
-                	<div class="title">或许你会对这些人感兴趣...</div>
-                    <ul class="userlist">
+            	<div class="sidebox">
+                	<div class="title"><h3>或许你会对这些人感兴趣...</h3></div>
+                    <div class="main">
+                    <ul class="userlist clearfix">
                     	<li>
                         	<div class="userpic"><a href="#"><img src="images/userimage/04.jpg" width="50" height="50" /></a></div>
                             <div class="userinfo">
@@ -214,6 +215,7 @@
                             </div>
                         </li>
                     </ul>
+                    </div>
                 </div>
             </div>
             <div class="clear"></div>
