将相册的“赞”去掉; 收藏酒时，不填写容量； 图片尺寸和缩小方法更改； 用户关注、粉丝页面样式更改； 推荐用户不展示当前用户；

--- a/app/views/admin/photos/_form.html.erb
+++ b/app/views/admin/photos/_form.html.erb
@@ -26,7 +26,7 @@
         <td>
           <%= radio_button_tag "photo[audit_status]",
                                APP_DATA['photo']['audit_status']['submitted'],
-                               APP_DATA['photo']['audit_status']['submitted'] == @photo.audit_status %> 已提交
+                               APP_DATA['photo']['audit_status']['submitted'] == @photo.audit_status.to_i %> 已提交
 
           <%= radio_button_tag "photo[audit_status]",
                                APP_DATA['photo']['audit_status']['approved'],
