--- a/app/views/admin/wineries/_region_tree.html.erb
+++ b/app/views/admin/wineries/_region_tree.html.erb
@@ -26,7 +26,7 @@
 </span>
 <% if @winery && @winery.region_tree_id %>
     <div id="region_tree_text" style="<%= "display:none;" unless @winery.region_tree_id %>">
-      <%= render 'share/region_tree', :region_tree => @winery.get_region_path(@winery.region_tree_id) %>
+      <%= render 'share/region_tree', :region_tree => @winery.get_region_path %>
       <%= link_to "编辑", "javascript: void(0)", :id => "edit_region_tree" %>
     </div>
 <% end %>
