--- a/app/views/mine/cellar_items/_form.html.erb
+++ b/app/views/mine/cellar_items/_form.html.erb
@@ -10,7 +10,7 @@
     </div>
     <div class="optional">
       <label>产区</label>
-      <div class="content"><%= @wine_detail.region_path_zh(@wine.region_tree_id) %></div>
+      <div class="content"><%= @wine_detail.wine.region_path_zh %></div>
     </div>
     <div class="optional">
       <label>酒庄</label>
