--- a/app/views/themes/waterfall/cellars/_show_cellar.html.erb
+++ b/app/views/themes/waterfall/cellars/_show_cellar.html.erb
@@ -53,7 +53,7 @@
                 <td class="des">
                   <%= wine_detail.wine.name_zh %><br/>
                   <%= wine_detail.wine.name_en %><br/>
-                  <%= wine_detail.region_path_zh(wine_detail.wine.region_tree_id)%><br/>
+                  <%= wine_detail.wine.region_path_zh %><br/>
                   <% if wine_detail.wine.winery %>
                     <%= wine_detail.wine.winery.name_zh %><br/>
                     <%= wine_detail.wine.style.name_zh %>
