--- a/app/views/themes/waterfall/photos/wine_photo_detail.html.erb
+++ b/app/views/themes/waterfall/photos/wine_photo_detail.html.erb
@@ -31,9 +31,9 @@
 				</div>
 			</div>
 			<div class="photo">
-				<%= image_tag @photo.image_url(:large), :widht => 440 %>
+				<%= image_tag @photo.image_url(:large_x) %>
 			</div>
-			<div class="info">
+			<div class="info clearfix">
 				
 				<%= render :partial => 'liked' %>
 				
