--- a/app/views/themes/waterfall/searches/results.html.erb
+++ b/app/views/themes/waterfall/searches/results.html.erb
@@ -4,7 +4,7 @@
       <a href="<%= url_for( '/searches/results?tab=all&word=' )%>" onclick="this.href+=$('#search_input').val()" id="search_link" class="btn_gray float_r">
         <span>搜索</span>
       </a>
-      <input class="text"  name="" id="search_input" type="text" placeholder="请输入酒款或酒庄的名称" />
+      <input class="text"  name="" id="search_input" type="text" placeholder="请输入酒款或酒庄的名称" value="<%= params[:word] %>"/>
     </div>
     <div class="clear"></div>
     <div class="tabs">
@@ -40,7 +40,7 @@
             <h1 class="en">
               <%= link_to winery.name_en, winery_path(winery) %>
             </h1>
-            <p class="location"><%= winery.region_path_zh(winery.region_tree_id)%></p>
+            <p class="location"><%= winery.region_path_zh %></p>
           </div>
         </li>
         <% end %>
