--- a/app/views/themes/waterfall/wine_details/_new_form.html.erb
+++ b/app/views/themes/waterfall/wine_details/_new_form.html.erb
@@ -11,7 +11,7 @@
       </div>
       <div class="required">
         <label><span>*</span>产区</label>
-        <% if @read_only %><%=  @register.region_path_zh(@wine.region_tree_id) %> <% else %><%= render "region_tree" %><% end %>
+        <% if @read_only %><%=  @register.region_path_zh %> <% else %><%= render "region_tree" %><% end %>
       </div>
 
       <div class="required">
