--- a/app/assets/themes/waterfall/stylesheets/home.css
+++ b/app/assets/themes/waterfall/stylesheets/home.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 #home {margin:30px 20px;}
 .iw {width:228px;background-color:#fff;padding-top:15px;box-shadow: 0 1px 2px 1px #E0E0E0;margin-bottom:10px;margin-right:10px;float:left;border:1px solid #ccc;}
+.iw_img {background-color:#f3f3f3;text-align:center;}
 .iw_img, .iw_info, .iw_main {margin-right:14px;margin-left:14px;}
 .iw_img, .iw_info {margin-bottom:10px;}
 .iw_info h1 {font-size:14px;}
