--- a/app/assets/themes/waterfall/stylesheets/thumb.css
+++ b/app/assets/themes/waterfall/stylesheets/thumb.css
@@ -18,26 +18,19 @@
 			height: 100%;
 			position: relative;
 		}
-		
+		#preview_inner .cover {text-align:center;}
 		#preview_inner div {
 			float: left;
 			width: 440px;
 			height: 440px;
 			position: relative;
 		}
-		
 		#preview_inner div a {
 			position: absolute;
 			bottom: 0;
 			left: 0;	
 			display: block;
 			width: 100%;
-			text-indent: 20px;
-			padding: 20px 0;
-			color: #fff;
-			background: url('../image/test/bg_trans.png');
-			text-decoration: none;
-			font-size: 18px;
 		}
 
 		#thumbs {
