--- a/app/views/mine/cellar_items/add_step_two.html.erb
+++ b/app/views/mine/cellar_items/add_step_two.html.erb
@@ -33,7 +33,7 @@
                   <div class="wine_info">
                     <h2><a href="wine_profile.html"><%= wine_detail.cname %></a></h2>
                     <h3><%= wine_detail.ename %></h3>
-                    <p><%= wine_detail.region_path_zh(wine_detail.wine.region_tree_id) %></p>
+                    <p><%= wine_detail.wine.region_path_zh %></p>
                     <p><%= wine_detail.wine.style.name_zh %></p>
                   </div>
                   <div class="clear"></div>
