--- a/app/views/themes/waterfall/cellar_items/_form.html.erb
+++ b/app/views/themes/waterfall/cellar_items/_form.html.erb
@@ -10,7 +10,7 @@
     </div>
     <div class="optional">
       <label>产区</label>
-      <div class="content"><%= @wine_detail.region_path_zh(@wine.region_tree_id) %></div>
+      <div class="content"><%= @wine_detail.wine.region_path_zh %></div>
     </div>
     <div class="optional">
       <label>酒庄</label>
@@ -19,12 +19,6 @@
     <div class="optional">
       <label>酒商</label>
       <div class="content"><%= f.text_field :buy_from, :class => 'text winemaker', :placeholder => '请输入酒商' %></div>
-    </div>
-    <div class="required">
-      <label><span>*</span>容量</label>
-      <div class="content">
-        <%= f.select :capacity, APP_DATA['wines']['capacity'].collect{|i| [i, i]} %>
-      </div>
     </div>
     <div class="required">
       <label><span>*</span>库存</label>
