--- a/app/views/themes/waterfall/share/_show_cellar.html.erb
+++ b/app/views/themes/waterfall/share/_show_cellar.html.erb
@@ -49,7 +49,7 @@
                 <td class="des">
                   <%= wine_detail.wine.name_zh %><br/>
                   <%= wine_detail.wine.name_en %><br/>
-                  <%= wine_detail.region_path_zh(wine_detail.wine.region_tree_id)%><br/>
+                  <%= wine_detail.wine.region_path_zh %><br/>
                   <%= wine_detail.wine.winery.name_zh %><br/>
                   <%= wine_detail.wine.style.name_zh %>
                 </td>
