--- a/app/views/themes/waterfall/users/share/_recommend_users.html.erb
+++ b/app/views/themes/waterfall/users/share/_recommend_users.html.erb
@@ -1,4 +1,4 @@
-<ul class="userlist">
+<ul class="userlist clearfix">
   <% @recommend_users.each do |user| %>
 <li>
   <div class="userpic">
@@ -12,7 +12,7 @@
       <%= link_to_user user, user_path(user.id,:trailing_slash => true) %> 
       <span class="location">上海</span>
     </p>
-     <p>
+     <p class="statu">
       <%= link_to "/friends/follow?user_id="+user.id.to_s, :class => "btn_gray" do  %>
       <span>加关注</span>
       <% end %>
