--- a/public/template/stylesheets/main.css
+++ b/public/template/stylesheets/main.css
@@ -418,3 +418,6 @@ div.pagination span.disabled {padding-right: 6px; padding-left: 6px; padding-bot
 
 /*------search dropdown------*/
 .ui-autocomplete {background-color:#fff;padding:5px;border:1px solid #ccc;position:absolute;}
+
+.errorpage {text-align:center;font-size:16px;font-weight:bold;margin-top:100px;}
+.errorpage p {line-height:24px;}
