--- a/app/views/themes/waterfall/albums/show.html.erb
+++ b/app/views/themes/waterfall/albums/show.html.erb
@@ -41,8 +41,11 @@
         </p>
       <% end %>
       <p class="info">
-        <%= photo.created_at.to_s(:normal) %> 上传 | 
-        <%= link_to "删除", delete_photo_albums_path(:photo_id => photo.id), :class => "fancybox_delete_photo fancybox.ajax" %> <br />
+        <%= photo.created_at.to_s(:normal) %> 上传
+        <% if current_user && current_user == @user %>
+         | <%= link_to "删除", delete_photo_albums_path(:photo_id => photo.id), :class => "fancybox_delete_photo fancybox.ajax" %>
+        <% end %>
+        <br />
         <%= photo.views_count %>浏览 | <%= photo.comments_count%>评论 | <%= photo.likes.size %>赞
       </p>
     </li>
