--- a/app/views/themes/waterfall/cellar_items/add_step_two.html.erb
+++ b/app/views/themes/waterfall/cellar_items/add_step_two.html.erb
@@ -31,7 +31,7 @@
                   </div>
                   <div class="wine_img">
                     <%= link_to wine_path(wine_detail.id) do %>
-                      <%= wine_cover_tag( wine_detail, :thumb_name => "thumb_x", :width => "70", :height => "70" ) %>
+                      <%= wine_label_tag( wine_detail, :thumb_name => "thumb_x", :width => "70", :height => "70" ) %>
                     <% end %>
                   </div>
                   <div class="wine_info">
