--- a/app/views/themes/waterfall/layouts/_global_nav.html.erb
+++ b/app/views/themes/waterfall/layouts/_global_nav.html.erb
@@ -25,7 +25,7 @@
 					 			<dl class="clearfix">
 					 				<dt>
 					 					<%= link_to wine_path(wine) do %>
-						 					<%= wine_cover_tag wine, :thumb_name => :thumb,  :size => "30x30" %>
+						 					<%= wine_label_tag wine, :thumb_name => :thumb,  :size => "30x30" %>
 					 					<% end %>
 					 				</dt>
 					 				<dd>
