--- a/app/views/themes/waterfall/wine_details/add_step_two.html.erb
+++ b/app/views/themes/waterfall/wine_details/add_step_two.html.erb
@@ -23,7 +23,7 @@
             <div class="box">
               <div class="box_t"></div>
               <div class="box_main">
-                <div class="wine_img"><%= wine_cover_tag( detail, :thumb_name => "thumb_x", :width => "70", :height => "70" )%></div>
+                <div class="wine_img"><%= wine_label_tag( detail, :thumb_name => "thumb_x", :width => "70", :height => "70" )%></div>
                 <div class="wine_info">
                   <h2><%= detail.wine.name_zh %></h2>
                   <h3><%= detail.wine.name_en %></h3>
