--- a/app/views/themes/waterfall/comments/_comment.html.erb
+++ b/app/views/themes/waterfall/comments/_comment.html.erb
@@ -1,6 +1,6 @@
 <div class="item">
   <div class="pic">
-   <%#= wine_cover_tag(comment.commentable, :thumb_name => :thumb)%>
+   <%#= wine_label_tag(comment.commentable, :thumb_name => :thumb)%>
   </div>
   <p class="comment_info">
     评论 <a href="#"> <%#= comment.commentable.cname %></a> <%= comment.updated_at.strftime '%Y-%m-%d' %>
