--- a/app/views/themes/waterfall/users/share/_comments.html.erb
+++ b/app/views/themes/waterfall/users/share/_comments.html.erb
@@ -5,7 +5,7 @@
 <li>
     <div class="pic">
      <%= link_to wine_path(comment.commentable) do %>
-        <%= wine_cover_tag comment.commentable, :thumb_name => :thumb, :width => 70, :height => 70 %>
+        <%= wine_label_tag comment.commentable, :thumb_name => :thumb, :width => 70, :height => 70 %>
       <% end %>
     </div>
       <div class="main">
