--- a/app/views/themes/waterfall/wineries/_hot_wine.html.erb
+++ b/app/views/themes/waterfall/wineries/_hot_wine.html.erb
@@ -5,7 +5,7 @@
       <% @hot_wines.each do |wine_detail| %>
           <li>
             <%= link_to wine_path(wine_detail) do %>
-                <%= wine_cover_tag wine_detail, :thumb_name => :thumb_x, :width => 70, :height => 70 %>
+                <%= wine_label_tag wine_detail, :thumb_name => :thumb_x, :width => 70, :height => 70 %>
                 <div class="info">
                   <h3 class="zh"><%= link_to wine_detail.cname, wine_path(wine_detail) %></h3>
                   <h3 class="en"><%= link_to wine_detail.ename, wine_path(wine_detail) %></h3>
