--- a/public/template/cellar_wine_add_detail.html
+++ b/public/template/cellar_wine_add_detail.html
@@ -110,10 +110,8 @@
                        <input type="text" class="text count" name="text"/>支
                    </div>
                    <div class="required">
-                       <label><span>*</span>所在地</label>
-                       <select name="">
-                         <option>上海</option>
-                       </select>
+                       <label><span>*</span>所在位置</label>
+                       <input name="text" type="text" class="text" value="上海" />
                    </div>
          <div class="required">
                        <label><span>*</span>购入价格</label>
