--- a/public/template/lightbox_comment_open.html
+++ b/public/template/lightbox_comment_open.html
@@ -42,9 +42,9 @@
             <div class="fancybox-inner">
             <div style="" id="comment_form">
                 <h3 class="title">关注这支酒</h3>
-                <p class="light_nor"><a href="#">同时写几句评论吧？</a><a href="#"><img src="images/icon/open.gif" width="13" height="13" /></a></p>
+                <p class="light_nor"><a href="#">收起</a> <a href="#"><img src="images/icon/close.gif" width="13" height="13" /></a></p>
                 <form novalidate="novalidate" method="post" id="new_wine_comment" data-validate="true" class="new_wine_comment" action="/wines/254/comments" accept-charset="UTF-8"><div style="margin:0;padding:0;display:inline"><input type="hidden" value="✓" name="utf8"><input type="hidden" value="XIKuWYLJfskIi11fzIhaYh3NcsDoLu479/qy/xf8sHc=" name="authenticity_token"></div><input type="hidden" value="comment" name="wine_comment[do]" id="wine_comment_do">
-                <div style="display:none">
+                <div style="display:">
                 <div id="wine_profile_star_bar" class="star_rate">
                   <table cellspacing="5" cellpadding="5" border="0">
                     <tbody><tr>
