--- a/public/template/stylesheets/fancybox.css
+++ b/public/template/stylesheets/fancybox.css
@@ -328,3 +328,4 @@
 .new_message .label {width:50px;}
 #comment_form .new_message  textarea {width:300px;}
 #comment_form .new_message .text_area {padding:5px;}
+.light_nor {padding:10px 20px;}
