--- a/public/template/stylesheets/main.css
+++ b/public/template/stylesheets/main.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 body {font-size:12px; font-family:Arial, Helvetica, sans-serif; color:#333;background:url(../images/bg/body_bg.jpg) repeat;}
-body {line-height:18px;}
+body {line-height:18px;word-break:break-all;}
 * {margin:0;padding:0;}
 input,button,select,textarea{outline:none}
 h1, h2, h3, h4, h5, h6, ul, li, p, dl, dd, dt {margin:0;padding:0;}
