--- a/public/template/stylesheets/main.css
+++ b/public/template/stylesheets/main.css
@@ -314,7 +314,7 @@ a.icon_comment {background-position:0 -143px;padding-left:15px;}
 .globel_navi {padding:10px;text-align:center;background-color:#fff;border-bottom:1px solid #ccc;font-size:14px;}
 .globel_navi li {display:inline;position:relative;}
 .globel_navi li.current {font-weight:bold;}
-.globel_navi li.arrow {background:url(../images/icon/xstb_276.gif) no-repeat 50px 0;}
+.globel_navi li.arrow {background:url(../images/icon/xstb_276.gif) no-repeat 50px 0;padding-bottom:13px;}
 .globel_navi li a{display:inline-block;padding:0 20px;color:#000;}
 .globel_navi li.last a {background:none;}
 .globel_navi li a:hover {color:#000;}
