--- a/app/views/themes/waterfall/share/_show_cellar.html.erb
+++ b/app/views/themes/waterfall/share/_show_cellar.html.erb
@@ -57,7 +57,7 @@
                   容量:<%= wine_detail.show_capacity %><br/>
                   购买时间:<%= item.buy_date.strftime("%Y年") unless item.buy_date.blank? %><br/>
                   酒商:<%= item.buy_from %><br/>
-                  适饮年限:<%= "#{item.drinkable_begin.strftime('%Y年') if item.drinkable_begin} - #{item.drinkable_end.strftime('%Y年') if item.drinkable_end}年" %>
+                  适饮年限:<%= drinkable(item) %>
                 </td>
                 <td class=“count”><%= item.number %></td>
                 <td class="price"><%= number_to_currency(item.price) %></td>
