--- a/app/views/themes/waterfall/wine_details/share/_spec.html.erb
+++ b/app/views/themes/waterfall/wine_details/share/_spec.html.erb
@@ -17,9 +17,7 @@
 	类型：<%= @wine.style.name_zh %><br />
 	容量：<%= @wine_detail.show_capacity %><br />
 	酒精度：<%= @wine_detail.show_alcoholicity %><br />
-	葡萄品种： <% @wine_detail.variety_percentages.each do |i| %>
-        <%= i.name_en %> (<%= i.show_percentage %>)、
-        <% end %>
+	葡萄品种： <%= variety_percentage_lists(@wine_detail.variety_percentages) %>
 </div>
 
 
