问题编号 #363 酒庄profile       1、加关注后的样式更改 	2、关注的人的头像展示 	3、图片展示页面图片的“赞”功能

--- a/app/views/themes/waterfall/photos/winery_photo_detail.html.erb
+++ b/app/views/themes/waterfall/photos/winery_photo_detail.html.erb
@@ -40,7 +40,7 @@
             </div>
 
             <div class="info">
-              <div class="like float_r"><%= link_to "赞(#{@photo.votes_count})", "#", :class => "icon_like" %></div>
+              <%= render :partial => 'liked' %>
               <div class="share float_r">
                 <%= render "share/sns_icons_second",
                    :image_url => sns_image_url(@photo, :thumb_name => :large),
