--- a/app/views/themes/waterfall/wineries/_follower.html.erb
+++ b/app/views/themes/waterfall/wineries/_follower.html.erb
@@ -7,9 +7,11 @@
     <ul class="follower">
       <%@users.each do |user| %>
           <li>
-            <%= link_to user_path(user) do %>
-                <%= user_avatar_tag(user, :thumb_name => :middle, :width => 50, :height => 50, :alt => user.name) %>
-            <% end %>
+            <%= link_to_user(user, user_path(user),
+                             { :with_avatar => true,
+                             :avatar_version => :middle},
+                             {:width => 50,
+                             :height => 50}) %>
           </li>
       <% end %>
     </ul>
