--- a/public/template/myhp.html
+++ b/public/template/myhp.html
@@ -41,9 +41,9 @@
     	<div class="whitespace"> 
          <div id="hp">
           <div class="hp_header">
-            <div class="hp_right"><a href="cellar.html" class="btn_red_sb"><span>我的酒窖</span></a></div>
             <div class="hp_userimg"><a href="myhp.html"><img src="images/userimage/p130.jpg" width="130" height="130" alt="usrename" /></a></div>
             <div class="hp_info">
+                <div class="hp_right"><a href="cellar.html" class="btn_red_sb"><span>某个名字很长很长的人的酒窖</span></a></div>
                 <div class="username">不良夏生</div>
                 <div class="mystatu">准备小宇宙爆发...<span><a href="#">修改</a></span></div>
                 <div class="item"><span class="icon_fol mr5">已关注</span><span class="icon_fol_e mr5">互相关注<span class="cancl_fol"> <a href="#">(取消)</a></span><a href="#" class="btn_gray"><span>加关注</span></a></span><a class="icon_mail" href="#">发私信</a></div>
