--- a/public/template/stylesheets/winery.css
+++ b/public/template/stylesheets/winery.css
@@ -65,6 +65,7 @@ ul.photo_list li.last {margin-right:0;}
 ul.photo_list li img {margin:0 0 10px 0;}
 ul.photo_list li .intro, .album_left .photo .intro{margin:0 0 5px 0;}
 .content .album_left {width:590px;float:left;}
+.content .album_left .photo {text-align:center;}
 .content .album_right {width:210px;float:left;}
 .album_left .info {margin:15px 0 40px 0;color:#666;}
 .album_left .photo img {margin:0 0 10px 0;}
