--- a/public/template/album_photo_detail.html
+++ b/public/template/album_photo_detail.html
@@ -41,9 +41,9 @@
     <div class="whitespace">
     <div id="hp">
           <div class="hp_header">
-            <div class="hp_right"><a href="cellar.html" class="btn_red_sb"><span>我的酒窖</span></a></div>
             <div class="hp_userimg"><a href="#"><img src="images/userimage/p130.jpg" width="130" height="130" alt="usrename" /></a></div>
             <div class="hp_info">
+                <div class="hp_right"><a href="cellar.html" class="btn_red_sb"><span>我的酒窖</span></a></div>
                 <div class="username">不良夏生</div>
                 <div class="mystatu">准备小宇宙爆发...<span><a href="#">修改</a></span></div>
                 <div class="item"><a class="icon_mail" href="#">私信</a> | <a href="#">设置</a></div>
@@ -74,7 +74,9 @@
             </div>
             <div class="photo">
                 <img src="images/test/pic600_1.jpg" width="590" height="404" alt="photo" />
-      <p class="name">鲔鱼莎拉</p>
+            </div>
+            <div>
+            	<p class="name">鲔鱼莎拉</p>
                 <p class="intro">中午在COCO吃了咖喱，色拉不错</p>
             </div>
               <div class="info">
