--- a/app/views/themes/waterfall/settings/avatar.html.erb
+++ b/app/views/themes/waterfall/settings/avatar.html.erb
@@ -1,7 +1,54 @@
 <% content_for :css do  %>
 <%= theme_stylesheet_link_tag "setting" %>
-<%= theme_stylesheet_link_tag :jcrop %>
+<%#= theme_stylesheet_link_tag :jcrop %>
 <% end %>
+<style type="text/css">
+  <style>
+  /* Fixes issue here http://code.google.com/p/jcrop/issues/detail?id=1 */
+  .jcrop-holder {
+    text-align: left; }
+
+  .jcrop-vline, .jcrop-hline {
+    font-size: 0px;
+    position: absolute;
+    background: white url(image-path("jcrop/Jcrop.gif")) top left repeat; }
+
+  .jcrop-vline {
+    height: 100%;
+    width: 1px !important; }
+
+  .jcrop-hline {
+    width: 100%;
+    height: 1px !important; }
+
+  .jcrop-vline.right {
+    right: 0px; }
+
+  .jcrop-hline.bottom {
+    bottom: 0px; }
+
+  .jcrop-handle {
+    font-size: 1px;
+    width: 7px !important;
+    height: 7px !important;
+    border: 1px #eee solid;
+    background-color: #333; }
+
+  .jcrop-tracker {
+    width: 100%;
+    height: 100%; }
+
+  .custom .jcrop-vline,
+  .custom .jcrop-hline {
+    background: yellow; }
+
+  .custom .jcrop-handle {
+    border-color: black;
+    background-color: #C7BB00;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px; }
+  </style>
+</style>
 <div id="wrapper950">
   <div class="whitespace setting">
     <h1 class="main_title">头像修改</h1>
