--- a/app/views/themes/waterfall/users/winery_follows.html.erb
+++ b/app/views/themes/waterfall/users/winery_follows.html.erb
@@ -6,7 +6,7 @@
 <div class="content">
 	<div class="left">
   	<div class="title_btn">
-        <h1>关注的酒 <span class="font_12 more">(共 <%= @user.wines_count %> 支)</span> </h1>
+        <h1>关注的酒庄 <span class="font_12 more">(共 <%= @user.winery_followings_count %> 支)</span> </h1>
       </div>
       <%= render "users/share/winery_follows" %>
       <div class="pagination">
